--- a/app/src/main/res/layout/activity_expense.xml
+++ b/app/src/main/res/layout/activity_expense.xml
@@ -69,11 +69,23 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
-                <CalendarView
-                    android:id="@+id/calendarView"
-                    android:layout_width="131dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+                <TextView
+                    android:id="@+id/textView15"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/lblDate"
+                    android:textSize="@dimen/size_Font" />
+
+                <EditText
+                    android:id="@+id/txtDate"
+                    android:clickable="true"
+                    android:editable="false"
+                    android:onClick="onClickTxtDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    />
+
             </TableRow>
 
             <TableRow
