--- a/app/src/main/res/layout/activity_income.xml
+++ b/app/src/main/res/layout/activity_income.xml
@@ -68,11 +68,21 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
-                <CalendarView
-                    android:id="@+id/calendarView"
-                    android:layout_width="131dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+                <TextView
+                    android:id="@+id/textView16"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/lblDate"
+                    android:textSize="@dimen/size_Font" />
+
+                <EditText
+                    android:id="@+id/txtDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:onClick="onClickTxtDate"
+                    android:editable="false"
+                    android:clickable="true"/>
             </TableRow>
 
             <TableRow
